some test modifications plus lil fix in over300promotion